# ledger-r

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: expense_commands.rs  mod.rs  params.rs  response.rs
src-tauri/src/database/: duck_store.rs  mod.rs  schema.sql  test_seed.sql
src-tauri/src/duck_store/: db_init.rs  db_seed.rs  duck_store.rs  mod.rs  schema.sql
src-tauri/src/duck_store/seeds/: dev_seed.sql  prod_seed.sql  test_seed.sql
src-tauri/src/models/: expenses.rs
src/components/: expense-details.tsx  expense-table.tsx  layout.tsx  sidebar-nav.tsx  summary-card.tsx  window-wrapper.tsx
src/components/data-table/: data-table.tsx  date-cell.tsx  editable-cell.tsx  index.ts
src/components/expense-details/: expense-details.tsx  index.ts
src/components/expense-table/: date-cell.tsx  editable-cell.tsx  expense-table.tsx  index.ts
src/components/layout/: layout.tsx
src/components/new-expenses-table/: index.ts  new-expense-table.tsx
src/components/sidebar/: index.ts  sidebar-nav.tsx
src/components/summary-card/: index.ts  summary-card.tsx
src/components/ui/: button.tsx  calendar.tsx  card.tsx  input.tsx  month-picker.tsx  popover.tsx  section-wrapper.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  table.tsx  tooltip.tsx
src/lib/hooks/: useExpense.ts  useExpenseSummary.ts
src/panes/: expense-pane.tsx  income-pane.tsx
src/types/: models.ts
(+31 files in other folders)
