[package]
name = "ledgerr"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lints.rust]
unused_imports = "allow"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.2.1", features = ["bundled"] }
thiserror = "2.0.12"
tokio = {version = "1.44.1", features = ["full", "macros", "rt-multi-thread"] }
uuid = {version = "1.16.0", features = ["v4"] }

